--- a/css/fridge.css
+++ b/css/fridge.css
@@ -2,75 +2,46 @@ body {
     background-color: rgb(64, 107, 163);
     color: white;
     margin: 0;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    padding-bottom: 10px;
-    background-color: hsl(207, 55%, 77%);
-}
-
-img {
-    border-radius: 200px;
-}
-
-.logo {
-    width: 60px;
-    cursor: pointer;
-    /* border-radius: 200px; */
-    margin-left: 5px;
-    padding: 5px;
-    /* margin-right: 500px; */
-}
-
-#website-title {
-    color: black;
-    margin-left: 15px;
-}
-
-.menu-item {
-    font-size: 28px;
-    /* justify-self: flex-end; */
-    text-decoration: None;
-
-    font-family: sans-serif;
-    /* background-color: aquamarine; */
-    color: black;
-    border-radius: 5px;
-    padding: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.desktop-menu {
-    /* background-color: red; */
-    padding-right: 10px;
-    margin-left: auto;
-}
-
-.menu-item:hover {
-    background-color: hsl(207, 55%, 87%);
-}
-
-.item-container {
-    /* margin-left: 100px; */
-    /* background-color: red; */
-}
-
-.list-item {
-    display: flex;
-    align-items: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #item-list-title {
     margin-left: 5px;
 }
 
+.list-item {
+    display: flex;
+    align-items: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: 2.5px solid black;
+    border-radius: 5px;
+    width: 99%;
+    transition: border-color 0.3s ease;
+}
+
+
+.item-model-container {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.item-name,
+.item-amount,
+.item-exp-date {
+    padding: 10px;
+}
+
+.expired {
+    background-color: red;
+    border-radius: 10px;
+}
+
 .delete-btn {
     margin-left: auto;
     width: 20px;
     padding: 6px;
-    margin-right: 10px;
+    margin-right: 20px;
     border-radius: 5px;
     background-color: white;
     cursor: pointer;
@@ -79,4 +50,8 @@ img {
 
 .delete-btn:hover {
     background-color: hsl(0, 100%, 50%);
+}
+
+.delete-btn:active {
+    background-color: hsl(0, 100%, 45%);
 }
