--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,7 @@
 nav {
     display: flex;
     align-items: center;
+    padding-top: 10px;
     padding-bottom: 10px;
     background-color: hsl(207, 55%, 77%);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
@@ -13,10 +14,8 @@ img {
 .logo {
     width: 60px;
     cursor: pointer;
-    /* border-radius: 200px; */
     margin-left: 5px;
     padding: 5px;
-    /* margin-right: 500px; */
 }
 
 #website-title {
@@ -29,7 +28,7 @@ img {
     text-decoration: None;
     color: black;
     border-radius: 5px;
-    padding: 5px;
+    padding: 30px;
     transition: background-color 0.3s ease;
 }
 
