--- a/css/styles.css
+++ b/css/styles.css
@@ -4,74 +4,110 @@ html {
 }
 
 body {
-    margin: 0px 0px 5% 0px;
-    padding: 0px;
-    background-color: rgb(64, 107, 163);
+    margin: 0;
+    /* padding: 0px; */
+    background-color: hsl(214, 44%, 45%);
+    color: white;
 }
 
 main {
-    margin: 0 10% 0 10%;
-}
-
-
-.shelf {
+    width: 100%;
+    /* margin: 0 auto; */
+    height: fit-content;
     display: flex;
-    background-color: #87d4da;
-    margin: 2.5% 2.5% 2.5% 2.5%;
-    justify-content: center;
-    border-radius: 20px;
-    border: 2px dashed #6DADE8;
+    align-items: center;
+    border-radius: 5px;
+    position: absolute;
+    top: 25%;
+    bottom: 25%;
+    background-color: hsl(164, 81%, 30%);
 }
 
-.freezer-shelf {
+#homepage-logo {
+    width: 100%;
+    height: 100%;
+}
+
+#homepage-logo-container {
+    width: 100%;
+    height: 100%;
+    max-width: 700px;
+    min-width: 350px;
+    /* flex-shrink: ; */
+    /* background-color: red; */
+    margin-right: 10px;
+}
+
+
+.all-forms {
     display: flex;
-    background-color: #6DADE8;
-    margin: 2.5% 2.5% 2.5% 2.5%;
-    justify-content: center;
-    border-radius: 20px;
-    border: 2px dashed #4d87bd;
+    flex-direction: column;
+    width: 100%;
+    align-self: center;
+    /* background-color: antiquewhite; */
 }
 
-.add-shelf {
-    display: flex;
-    background-color: #f08080;
-    margin: 2.5% 25% 2.5% 25%;
-    justify-content: center;
-    border-radius: 20px;
-    border: 2px dashed #cd5e5e;
+h2 {
+    color: white;
 }
 
-.add-item {
-    display: flex;
-    background-color: #f08080;
-    margin: 2.5% 25% 2.5% 25%;
-    justify-content: center;
-    border-radius: 20px;
-    border: 2px dashed #cd5e5e;
+label {
+    color: white;
 }
 
-.center-button {
-    text-align: center;
+input {
+    width: 300px;
+    max-width: fit-content;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    border: none;
+    padding: 10px 30px;
+}
+
+
+.login-area {
+    width: 100%;
+    height: 100%;
+    /* background-color: chocolate; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.colored-button {
-    background-color: #0b6122;
-    /* Example color: Dodger Blue */
-    color: #fff;
-    /* Text color (e.g., white) */
-    padding: 30px 75px;
-    /* Optional padding for better appearance */
-    border: solid;
-    /* Optional border styling */
-    border-color: #fff;
-    border-radius: 50px;
-    /* Optional border radius for rounded corners */
-    cursor: pointer;
+.account-buttons {
+    /* margin: 0 auto; */
+    display: flex;
+    flex-direction: column;
+    /* background-color: blue; */
 }
 
-.shelf-name {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+.login-state-button {
+    width: 150px;
+    max-width: fit-content;
+    padding: 10px 30px;
+    /* margin-top: 100px; */
+    border: none;
+    border-radius: 100px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: hsl(153, 100%, 70%);
+    transition: background-color 0.3s ease;
+}
+
+.login-state-button:hover {
+    background-color: hsl(153, 100%, 80%);
+}
+
+span {
+    color: hsl(0, 0%, 0%);
+    font-weight: bold;
+    cursor: pointer;
+    padding: 10px 5px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+}
+
+span:hover {
+    background-color: hsl(164, 81%, 35%);
 }
