--- a/css/navbar.css
+++ b/css/navbar.css
@@ -76,7 +76,7 @@ nav {
 
     #website-title {
         margin-left: 0;
-        margin-bottom: 15px;
+        margin-top: 15px;
         margin-bottom: 15px;
         /* Align with logo */
         font-size: 18px;
