--- a/css/profile.css
+++ b/css/profile.css
@@ -24,19 +24,49 @@ body {
     color: white;
 }
 
+#account-features {
+    width: 98%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 10px;
+    margin: 50px auto 0px auto;
+    border: 5px solid hsl(0, 0%, 18%);
+    border-radius: 10px;
+}
+
 #user-profile {
     /* width: fit-content; */
-    width: 98%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
-    padding: 10px;
-    /* margin-top: 50px;
-    margin-left: 20px; */
+    /* padding: 10px;
+
     margin: 50px auto 0px auto;
     border: 5px solid hsl(0, 0%, 18%);
-    border-radius: 10px;
+    border-radius: 10px; */
+}
+
+#account-delete-button {
+    width: 100%;
+    max-width: 150px;
+    padding: 10px;
+    margin-bottom: 15px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+    background-color: hsl(153, 100%, 70%);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left: auto;
+}
+
+#account-delete-button:hover {
+    background-color: hsl(153, 100%, 80%);
 }
 
 h3 {
@@ -124,6 +154,19 @@ main {
     .all-forms {
         padding: 15px;
     }
+
+    #account-features {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 20px;
+    }
+
+    /* #account-delete-button {
+        margin-left: 0;
+    } */
+
 }
 
 /* Extra small mobile view */
@@ -131,5 +174,13 @@ main {
     .login-state-button {
         padding: 8px;
         font-size: 0.9rem;
+    }
+
+    #account-features {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
     }
 }
