--- a/css/fridge.css
+++ b/css/fridge.css
@@ -107,3 +107,24 @@ body {
 .delete-btn:active {
     background-color: hsl(0, 100%, 45%);
 }
+
+#search-container {
+    margin: 15px;
+    text-align: center;
+}
+
+#search-bar {
+    width: 90%;
+    padding: 10px;
+    border: 2px solid hsl(214, 44%, 55%);
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: hsl(214, 44%, 95%);
+    color: hsl(214, 44%, 25%);
+}
+
+#search-bar:focus {
+    outline: none;
+    border-color: hsl(214, 44%, 65%);
+    background-color: hsl(214, 44%, 98%);
+}
